bk_ida/gccida/c0/expand_compound_operation
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6031:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+4h] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6032:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // [rsp+10h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6033:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+14h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6078:28: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_fmt_e( USE, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6078:43: error: expected expression
v2 = gen_rtx_fmt_e( USE, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6086:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint))) == 0 ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6086:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint))) == 0 ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6088:38: error: use of undeclared identifier 'machine_mode'
temp = gen_rtx_fmt_e( ZERO_EXTEND, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6088:53: error: expected expression
temp = gen_rtx_fmt_e( ZERO_EXTEND, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6098:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x))) == 0 ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6098:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x))) == 0 ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6108:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x))) == 0 ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/combine.c:6108:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x))) == 0 ) 
                 ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_compound_operation/src/obj/combine.o] Error 1
